<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseBlack"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <uz.med.ui_core.RoundedImageView
            android:id="@+id/img_avatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:radius="25dp"
            app:srcImg="@drawable/ic_avatar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="cursive"
            android:text="@string/moviestream"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/img_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/img_avatar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_upcoming_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_avatar"
            tools:listitem="@layout/item_upcoming_movie" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_trending_tv"
            style="@style/MovieListHeaderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trending_tv_series"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_upcoming_movies" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trending_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="horizontal"
            android:paddingStart="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trending_tv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_popular_movies"
            style="@style/MovieListHeaderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popular_movies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_trending_tv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="horizontal"
            android:paddingStart="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_popular_movies" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_top_rated_movies"
            style="@style/MovieListHeaderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top_rated_movies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_popular_movies" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_top_rated_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="horizontal"
            android:paddingStart="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_top_rated_movies" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_trending_movies"
            style="@style/MovieListHeaderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trending_movies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_top_rated_movies" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trending_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="horizontal"
            android:paddingStart="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trending_movies" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

